--- a/index.html
+++ b/index.html
@@ -1,11 +1,116 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>My Homepage</title>
-</head>
-<body>
-    <h1>Hello, this is my homepage!</h1>
-    <p>If you see this page, GitHub Pages works.</p>
-</body>
-</html>
+<!-- 顶部名字 + 简短说明，可以居中一点点好看 -->
+<h1 align="center">Your Name (中文名)</h1>
+
+<p align="center">
+  Ph.D. Candidate / M.S. Student / Researcher @ Your Affiliation <br/>
+  Email: your_email@example.com
+</p>
+
+<p align="center">
+  <a href="https://github.com/yourname">GitHub</a> ·
+  <a href="https://scholar.google.com/">Google Scholar</a> ·
+  <a href="https://your-homepage.com">Homepage</a>
+</p>
+
+---
+
+## 🧑‍💻 Biography
+
+I am a (Ph.D. / M.S. / Research) student at **[Your University / Institute]**, 
+working with **[Advisor 1]** and **[Advisor 2]**.  
+My research interests mainly lie in:
+
+- Remote sensing image / video processing
+- Computer vision and deep learning
+- Vision-language models / multimodal learning
+- (Add your own topics...)
+
+**Education**
+
+- Ph.D. in XXX, *[Your University]*, 20XX.09 – Now  
+- M.S. in XXX, *[Your University]*, 20XX.09 – 20XX.06  
+- B.S. in XXX, *[Your University]*, 20XX.09 – 20XX.06  
+
+---
+
+## 📰 News
+
+- (2025/08) One paper **Title** was presented orally at *Conference / Journal*.  
+- (2025/07) Awarded **Some Scholarship / Award Name**.  
+- (2025/06) One paper **Title** was accepted by *Journal Name*.  
+- (…根据自己情况填几条最近 3–8 条即可…)
+
+---
+
+## 📄 Selected Publications
+
+(*\* indicates equal contribution / co-first author if needed*)
+
+- **[Paper Title 1](#)**  
+  Your Name, Coauthor A, Coauthor B, …  
+  *Journal / Conference*, 202X.  
+  [PDF](#) | [Code](#)
+
+- **[Paper Title 2](#)**  
+  Your Name, Coauthor A, Coauthor B, …  
+  *Journal / Conference*, 202X.  
+  [PDF](#) | [Code](#)
+
+- **[Paper Title 3](#)**  
+  Your Name, …  
+  *Journal / Conference*, 202X.  
+  [PDF](#) | [Code](#)
+
+> More publications can be found on my [Google Scholar](https://scholar.google.com/).
+
+---
+
+## 📦 Selected Projects
+
+- **[Project Name 1](https://github.com/yourname/project1)**  
+  One-sentence description of what the project does and why it is interesting.
+
+- **[Project Name 2](https://github.com/yourname/project2)**  
+  One-sentence description (e.g., dataset, codebase, benchmark…).
+
+- **[Project Name 3](https://github.com/yourname/project3)**  
+  One-sentence description.
+
+---
+
+## 🧑‍⚖️ Services
+
+- Journal Reviewer:  
+  - IEEE Transactions on XXX  
+  - IEEE Transactions on YYY  
+  - Information Fusion  
+  - (…写你实际审过的期刊…)
+
+- Conference Reviewer / PC Member:  
+  - CVPR / ICCV / NeurIPS / IGARSS / 等等（按实际情况写）
+
+---
+
+## 🏅 Awards & Honors
+
+- 20XX – National Scholarship for Graduate Students  
+- 20XX – Excellent Master Thesis Award of [Your University]  
+- 20XX – Outstanding Graduate of [Your University]  
+- (挑 3–6 个最重要的奖项即可)
+
+---
+
+## 📊 GitHub Stats (optional)
+
+<p align="center">
+  <img src="https://github-readme-stats.vercel.app/api?username=yourname&show_icons=true&hide_title=true" />
+</p>
+
+---
+
+## 📬 Contact
+
+- Email: your_email@example.com  
+- GitHub: [https://github.com/yourname](https://github.com/yourname)  
+- Homepage: [https://your-homepage.com](https://your-homepage.com)
+
