--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!-- 顶部名字 + 简短说明，可以居中一点点好看 -->
-<h1 align="center">Your Name (中文名)</h1>
+<h1 align="center">Haiyang Wu (吴海洋)</h1>
 
 <p align="center">
-  Ph.D. Candidate / M.S. Student / Researcher @ Your Affiliation <br/>
-  Email: your_email@example.com
+  Ph.D. Candidate @ Central South University <br/>
+  Email: 245001024@csu.edu.cn
+  WeChat:w1752436056
 </p>
 
 <p align="center">
-  <a href="https://github.com/yourname">GitHub</a> ·
-  <a href="https://scholar.google.com/">Google Scholar</a> ·
-  <a href="https://your-homepage.com">Homepage</a>
+  <a href="https://github.com/WithoutOcean">GitHub</a> ·
+  <a href="https://scholar.google.com/citations?user=VzEne7oAAAAJ&hl=zh-TW">Google Scholar</a> ·
+  <a href="https://withoutocean.github.io/">Homepage</a>
 </p>
 
 ---
