Update homepage details for Haiyang Wu

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Your Name's Homepage</title>
+  <title>Haiyang Wu's Homepage</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     :root {
@@ -255,7 +255,7 @@
   <!-- 顶部导航栏 -->
   <header>
     <div class="nav-inner">
-      <div class="site-title">Your Name's Homepage</div>
+      <div class="site-title">Haiyang Wu's Homepage</div>
       <nav>
         <a href="#home">Home</a>
         <a href="#experience">Experience</a>
@@ -274,50 +274,24 @@
         <img src="img/profile.jpg" alt="Profile photo of Your Name" />
       </div>
       <div class="hero-main">
-        <h1>Your Name (中文名)</h1>
-        <p class="subtitle">b. Month Year &nbsp;|&nbsp; Ph.D. Candidate at XXX University</p>
-        <p class="info-line">Email: <a href="mailto:yourname@xxx.com">yourname@xxx.com</a></p>
+        <h1>Haiyang Wu (吴海洋)</h1>
+        <p class="subtitle">1997 &nbsp;|&nbsp; Ph.D. Candidate at Central South University</p>
+        <p class="info-line">Email: <a href="mailto:yourname@xxx.com">245001024@csu.edu.cn</a></p>
 
         <p class="affiliation">
-          XXX University / School of XXX<br />
-          Institute / Lab of XXX
+           Central South University/ 中南大学<br />
         </p>
 
-        <p class="motto">🎵 Hopefully, something great will come for all of us. 🎵</p>
+        <p class="motto">🎵 Everything happens for the best 🎵</p>
 
         <p class="links">
-          <a href="https://github.com/yourname">GitHub</a>
-          <a href="https://scholar.google.com/">Google Scholar</a>
-          <a href="https://your-domain.com">Homepage</a>
+          <a href="https://github.com/WithoutOcean">GitHub</a>
+          <a href="https://scholar.google.com/citations?user=VzEne7oAAAAJ&hl=zh-TW">Google Scholar</a>
+          <a href="https://withoutocean.github.io/">Homepage</a>
         </p>
       </div>
     </section>
-
-    <!-- Biography -->
-    <section id="biography">
-      <h2>Biography</h2>
-      <p>
-        Your Name is a Ph.D. candidate at <strong>XXX University</strong>, supervised by
-        <strong>Prof. A</strong> and <strong>Prof. B</strong>. His/Her research interests focus on
-        <em>remote sensing image processing, computer vision, and vision-language models</em>.
-      </p>
-
-      <ul class="timeline">
-        <li>
-          <span class="time">Ph.D.</span> in XXX, <strong>XXX University</strong>,
-          <span class="detail">Supervisor: Prof. A &amp; Prof. B, 2023.09 – Now</span>
-        </li>
-        <li>
-          <span class="time">M.S.</span> in XXX, <strong>YYY University</strong>,
-          <span class="detail">Supervisor: Prof. C, 2020.09 – 2023.06</span>
-        </li>
-        <li>
-          <span class="time">B.S.</span> in XXX, <strong>ZZZ University</strong>,
-          <span class="detail">2016.09 – 2020.06</span>
-        </li>
-      </ul>
-    </section>
-
+    
     <!-- News -->
     <section id="news">
       <h2>News</h2>
