--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
     <section id="home" class="hero-card">
       <div class="hero-photo">
         <!-- 换成你的照片路径，例如 img/profile.jpg -->
-        <img src="img/profile.jpg" alt="Profile photo of Your Name" />
+        <img src="吴海洋.png" alt="Profile photo of Your Name" />
       </div>
       <div class="hero-main">
         <h1>Haiyang Wu (吴海洋)</h1>
