--- a/index.html
+++ b/index.html
@@ -296,10 +296,10 @@
     <section id="news">
       <h2>News</h2>
       <ul class="news-list">
-        <li>(08/2025) The paper <strong>Paper Title A</strong> was presented orally at <em>IEEE IGARSS 2025</em>.</li>
-        <li>(07/2025) Awarded the <strong>Outstanding Master's Thesis Award</strong> of XXX University.</li>
-        <li>(06/2025) One paper <strong>Paper Title B</strong> was accepted by <em>IEEE TGRS</em>.</li>
-        <li>(02/2025) One co-authored paper <strong>Paper Title C</strong> was accepted by <em>IEEE TIP</em>.</li>
+        <li>[2025.5.15] 《FarmSeg_VLM: A farmland remote sensing image segmentation method considering vision-language alignment》 received by **ISPRS Journal of Photogrammetry and Remote Sensing** [Paper](https://doi.org/10.1016/j.isprsjprs.2025.05.010). The associated code will be made publicly available upon completion of organization and finalization.</li>
+        <li>[2025.5.09] 《FarmSeg_VLM: A farmland remote sensing image segmentation method considering vision-language alignment》 received by **ISPRS Journal of Photogrammetry and Remote Sensing** and is currently in the proof stage. The associated code will be made publicly available upon completion of organization and finalization.</li>
+        <li>[2025.4.25] 《A large-scale image-text dataset benchmark for farmland segmentation》 received as preprint by **Earth System Science Data** [Paper](https://essd.copernicus.org/preprints/essd-2025-184/essd-2025-184.pdf) [Datasets](https://doi.org/10.5281/zenodo.15099885)</li>
+        <li>[2025.2.25] 《FSVLM: A Vision-Language Model for Remote Sensing Farmland Segmentation》 received by **IEEE TGRS** <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=10851315">[Paper]</a> [code](https://github.com/WithoutOcean/FSVLM-A-Vision-Language-Model-for-Remote-Sensing-Farmland-Segmentation)</li>
         <li>(12/2024) Supported by the <strong>Basic Research Project for Young Scholars of NSFC</strong>.</li>
       </ul>
     </section>
