--- a/index.html
+++ b/index.html
@@ -296,11 +296,12 @@
     <section id="news">
       <h2>News</h2>
       <ul class="news-list">
-        <li>[2025.5.15] 《FarmSeg_VLM: A farmland remote sensing image segmentation method considering vision-language alignment》 received by **ISPRS Journal of Photogrammetry and Remote Sensing** [Paper](https://doi.org/10.1016/j.isprsjprs.2025.05.010). The associated code will be made publicly available upon completion of organization and finalization.</li>
-        <li>[2025.5.09] 《FarmSeg_VLM: A farmland remote sensing image segmentation method considering vision-language alignment》 received by **ISPRS Journal of Photogrammetry and Remote Sensing** and is currently in the proof stage. The associated code will be made publicly available upon completion of organization and finalization.</li>
-        <li>[2025.4.25] 《A large-scale image-text dataset benchmark for farmland segmentation》 received as preprint by **Earth System Science Data** [Paper](https://essd.copernicus.org/preprints/essd-2025-184/essd-2025-184.pdf) [Datasets](https://doi.org/10.5281/zenodo.15099885)</li>
-        <li>[2025.2.25] 《FSVLM: A Vision-Language Model for Remote Sensing Farmland Segmentation》 received by **IEEE TGRS** <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=10851315">[Paper]</a> [code](https://github.com/WithoutOcean/FSVLM-A-Vision-Language-Model-for-Remote-Sensing-Farmland-Segmentation)</li>
-        <li>(12/2024) Supported by the <strong>Basic Research Project for Young Scholars of NSFC</strong>.</li>
+        <li>[2025.11.15]<strong><a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=10851315">《FSVLM: A Vision-Language Model for Remote Sensing Farmland Segmentation》</a></strong>has garnered an ESI Highly Cited Paper.
+        <li>[2025.09.13] <strong>《A large-scale image-text dataset benchmark for farmland segmentation》</strong> received by <strong>Earth System Science Data</strong> <a href="https://essd.copernicus.org/articles/17/4835/2025/">[Paper]</a> <a href="https://doi.org/10.5281/zenodo.15099885">[Datasets]</a></li>
+        <li>[2025.05.15] <strong>《FarmSeg_VLM: A farmland remote sensing image segmentation method considering vision-language alignment》</strong> received by  <strong>ISPRS Journal of Photogrammetry and Remote Sensing</strong> <a href="https://doi.org/10.1016/j.isprsjprs.2025.05.010">[Paper]</a>. The associated code will be made publicly available upon completion of organization and finalization.</li>
+        <li>[2025.05.09] <strong>《FarmSeg_VLM: A farmland remote sensing image segmentation method considering vision-language alignment》</strong> received by  <strong>ISPRS Journal of Photogrammetry and Remote Sensing</strong> and is currently in the proof stage. The associated code will be made publicly available upon completion of organization and finalization.</li>
+        <li>[2025.04.25] <strong>《A large-scale image-text dataset benchmark for farmland segmentation》</strong> received as preprint by  <strong>Earth System Science Data</strong> <a href="https://essd.copernicus.org/preprints/essd-2025-184/essd-2025-184.pdf">[Paper]</a> <a href="https://doi.org/10.5281/zenodo.15099885">[Datasets]</a></li>
+        <li>[2025.02.25] <strong>《FSVLM: A Vision-Language Model for Remote Sensing Farmland Segmentation》</strong> received by <strong> IEEE TGRS</strong> <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=10851315">[Paper]</a> [code](https://github.com/WithoutOcean/FSVLM-A-Vision-Language-Model-for-Remote-Sensing-Farmland-Segmentation)</li>
       </ul>
     </section>
 
