Update publication note to indicate corresponding author

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
     <!-- Publications -->
     <section id="publications">
       <h2>Selected Publications</h2>
-      <p><em>(* indicates equal contribution.)</em></p>
+      <p><em>(* indicates Corresponding author.)</em></p>
 
       <div class="pub-list">
         <div class="pub-item">
