--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
       <div class="site-title">Haiyang Wu's Homepage</div>
       <nav>
         <a href="#home">Home</a>
-        <a href="#experience">Experience</a>
+        <!-- <a href="#experience">Experience</a> -->
         <a href="#publications">Publications</a>
         <a href="#services">Services</a>
         <a href="#awards">Awards</a>
